--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,14 +1,11 @@
 queue:
   name: Hosted Ubuntu 1604
 
-
 variables:
-- group: 'Terraform Service Principal'
-- group: 'Terraform State'
-- name: tfstate_key
-  value: 'jimpaine.pre-ready-2019-H1.master.tfstate'
-- name: resource_name
-  value: 'jp174'
+- group: 'TerraformClient'
+- group: 'TerraformState'
+- name: state-key
+  value: 'jimpaine.azure-terraform-lab.master.tfstate'
 
 steps:
 
@@ -16,18 +13,18 @@ steps:
   displayName: 'Replace tokens in **/*.tfvars'
 
   inputs:
-    rootDirectory: ./
+    rootDirectory: ./env
     targetFiles: '**/*.tfvars'
 
 - script: |
    terraform init \
-       -backend-config="resource_group_name=$(tfstate_resource_group)" \
-       -backend-config="storage_account_name=$(tfstate_storage_account)" \
-       -backend-config="container_name=$(tfstate_container)" \
-       -backend-config="key=$(tfstate_key)" \
-       -backend-config="access_key=$(tfstate_access_key)"
+       -backend-config="resource_group_name=$(resource-group)" \
+       -backend-config="storage_account_name=$(storage-account)" \
+       -backend-config="container_name=$(container-name)" \
+       -backend-config="key=$(state-key)" \
+       -backend-config="access_key=$(access-key)"
 
-  workingDirectory: ./
+  workingDirectory: ./env
   displayName: 'Terraform init'
 
 
@@ -35,5 +32,5 @@ steps:
    terraform apply -auto-approve \
        -var-file="lab.tfvars"
 
-  workingDirectory: ./
+  workingDirectory: ./env
   displayName: 'Terraform apply'
